--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -107,6 +107,7 @@ set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
@@ -116,6 +117,7 @@ set_real_ip_from 124.198.131.108;
 set_real_ip_from 124.198.131.223;
 set_real_ip_from 124.198.131.253;
 set_real_ip_from 124.198.132.172;
+set_real_ip_from 124.198.132.237;
 set_real_ip_from 124.198.132.52;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
@@ -240,6 +242,7 @@ set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -1157,6 +1160,7 @@ set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
+set_real_ip_from 92.113.144.149;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.239;
@@ -1177,6 +1181,7 @@ set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
+set_real_ip_from 94.154.172.207;
 set_real_ip_from 94.156.152.234;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.121.91;
