--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -107,7 +107,6 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -141,6 +140,7 @@ allow 144.126.133.74;
 allow 144.172.84.103;
 allow 146.59.126.232;
 allow 146.59.231.4;
+allow 147.45.116.145;
 allow 147.45.217.187;
 allow 148.113.152.91;
 allow 149.102.153.38;
@@ -204,7 +204,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
@@ -241,6 +240,7 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -276,6 +276,7 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
+allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.236.55;
@@ -580,7 +581,6 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -746,7 +746,6 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -918,10 +917,9 @@ allow 23.129.64.152;
 allow 23.129.64.153;
 allow 23.137.253.254;
 allow 23.137.253.27;
-allow 23.137.254.137;
-allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -989,8 +987,7 @@ allow 2602:f6f6:2:cd1f::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
-allow 2602:fc24:10:61b::1;
-allow 2602:fc24:10:bb36::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1303,6 +1300,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1566,7 +1564,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1944,7 +1941,6 @@ allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
