--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -107,7 +107,6 @@ deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.172.205.8;
 deny 114.35.245.150;
-deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
 deny 118.194.234.240;
@@ -241,6 +240,7 @@ deny 185.100.87.136;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
+deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -746,7 +746,6 @@ deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:545c::b;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1303,6 +1302,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1543,7 +1543,6 @@ deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
-deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:d604:1:151::2;
@@ -1781,7 +1780,6 @@ deny 45.90.185.118;
 deny 45.90.185.119;
 deny 45.91.250.107;
 deny 45.9.156.101;
-deny 45.9.168.103;
 deny 45.9.168.18;
 deny 45.9.168.192;
 deny 45.94.31.68;
@@ -1916,6 +1914,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -1944,6 +1943,7 @@ deny 91.219.236.91;
 deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
+deny 92.113.144.149;
 deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.113.25.239;
