--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -101,6 +101,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -421,7 +422,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -779,7 +779,6 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:140;
-allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
 allow 2a12:de40:21:1be4::;
