--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -107,6 +107,7 @@ set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
@@ -141,7 +142,6 @@ set_real_ip_from 144.172.84.103;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
-set_real_ip_from 147.45.217.187;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.129;
@@ -584,7 +584,6 @@ set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
-set_real_ip_from 193.26.115.212;
 set_real_ip_from 193.26.115.243;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
@@ -745,6 +744,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:545c::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1276,7 +1276,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1634,7 +1633,6 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
 set_real_ip_from 2a12:a800:9:1:193:26:115:140;
-set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 2a12:de40:21:1be4::;
@@ -1789,6 +1787,7 @@ set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
+set_real_ip_from 46.249.49.183;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
@@ -1806,7 +1805,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1897,6 +1895,30 @@ set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.38.130.50;
 set_real_ip_from 85.239.41.130;
+set_real_ip_from 85.239.55.11;
+set_real_ip_from 85.239.55.110;
+set_real_ip_from 85.239.55.112;
+set_real_ip_from 85.239.55.114;
+set_real_ip_from 85.239.55.123;
+set_real_ip_from 85.239.55.132;
+set_real_ip_from 85.239.55.168;
+set_real_ip_from 85.239.55.173;
+set_real_ip_from 85.239.55.174;
+set_real_ip_from 85.239.55.184;
+set_real_ip_from 85.239.55.189;
+set_real_ip_from 85.239.55.192;
+set_real_ip_from 85.239.55.201;
+set_real_ip_from 85.239.55.228;
+set_real_ip_from 85.239.55.230;
+set_real_ip_from 85.239.55.239;
+set_real_ip_from 85.239.55.24;
+set_real_ip_from 85.239.55.249;
+set_real_ip_from 85.239.55.25;
+set_real_ip_from 85.239.55.250;
+set_real_ip_from 85.239.55.31;
+set_real_ip_from 85.239.55.37;
+set_real_ip_from 85.239.55.51;
+set_real_ip_from 85.239.55.80;
 set_real_ip_from 85.90.196.162;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 87.118.110.27;
@@ -1912,6 +1934,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
@@ -1938,6 +1961,30 @@ set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
+set_real_ip_from 91.227.77.107;
+set_real_ip_from 91.227.77.108;
+set_real_ip_from 91.227.77.119;
+set_real_ip_from 91.227.77.125;
+set_real_ip_from 91.227.77.139;
+set_real_ip_from 91.227.77.158;
+set_real_ip_from 91.227.77.160;
+set_real_ip_from 91.227.77.181;
+set_real_ip_from 91.227.77.193;
+set_real_ip_from 91.227.77.200;
+set_real_ip_from 91.227.77.208;
+set_real_ip_from 91.227.77.209;
+set_real_ip_from 91.227.77.226;
+set_real_ip_from 91.227.77.229;
+set_real_ip_from 91.227.77.237;
+set_real_ip_from 91.227.77.25;
+set_real_ip_from 91.227.77.31;
+set_real_ip_from 91.227.77.36;
+set_real_ip_from 91.227.77.44;
+set_real_ip_from 91.227.77.48;
+set_real_ip_from 91.227.77.51;
+set_real_ip_from 91.227.77.54;
+set_real_ip_from 91.227.77.62;
+set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.113.144.149;
