--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -107,7 +107,6 @@ set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
@@ -240,6 +239,7 @@ set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -443,6 +443,7 @@ set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
+set_real_ip_from 185.39.207.83;
 set_real_ip_from 185.40.4.100;
 set_real_ip_from 185.40.4.101;
 set_real_ip_from 185.40.4.121;
@@ -570,6 +571,7 @@ set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
 set_real_ip_from 195.47.238.177;
+set_real_ip_from 195.47.238.178;
 set_real_ip_from 195.47.238.44;
 set_real_ip_from 195.47.238.82;
 set_real_ip_from 195.47.238.83;
@@ -713,7 +715,6 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:545c::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1251,9 +1252,9 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
+set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -1268,6 +1269,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1420,6 +1422,7 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
+set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
@@ -1576,13 +1579,13 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
+set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.177.222;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 34.130.255.210;
-set_real_ip_from 34.87.165.78;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
 set_real_ip_from 37.114.50.142;
@@ -1825,7 +1828,6 @@ set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
@@ -1922,7 +1924,6 @@ set_real_ip_from 91.227.77.62;
 set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
-set_real_ip_from 92.113.144.149;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.239;
